Bug 1620714 - Set BrowsingContext::Closed as early as possible, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D77109